--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: python
 
+sudo: required
+
 python:
   # - "3.3"
   - "3.6"
+
+# before_install:
+#   - sudo apt-get install gfortran
 
 install:
   - pip install numpy
