--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,16 @@ python:
   # - "3.3"
   - "3.6"
 
-# before_install:
-#   - sudo apt-get install gfortran
+before_install:
+  - sudo apt-get install gfortran
 
 install:
   - pip install numpy
 
-addons:
-  apt:
-    pachages:
-    - gfortran
+# addons:
+#   apt:
+#     pachages:
+#     - gfortran
 
 script:
   - cd ${TRAVIS_BUILD_DIR}/submodule_python && python3 test.py
