--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,6 @@ script:
   - bash test.sh
   - cd ${TRAVIS_BUILD_DIR}/submodule_cpp && make
   - cd ${TRAVIS_BUILD_DIR}/submodule_fortran && make
+  - cd ${TRAVIS_BUILD_DIR}/submodule_openmpi && make
 
 
