--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ script:
   - cd ${TRAVIS_BUILD_DIR}/submodule_cpp && make
   - cd ${TRAVIS_BUILD_DIR}/submodule_fortran && make
   - cd ${TRAVIS_BUILD_DIR}/submodule_openmpi && make
+  - ompi_info
   - type mpif90
   - type mpirun
 
