--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 script:
   - cd ${TRAVIS_BUILD_DIR}/submodule_python && python3 test.py
   - bash test.sh
-  - cd ${TRAVIS_BUILD_DIR}/submodule_cpp && make
+  - cd ${TRAVIS_BUILD_DIR}/submodule_cpp && make -j4
   - cd ${TRAVIS_BUILD_DIR}/submodule_fortran && make
   - cd ${TRAVIS_BUILD_DIR}/submodule_openmpi && make
 
